<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg"
    tools:context="com.qrees.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_312sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_80sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_field"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <EditText
                    android:id="@+id/et_for_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolor"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/textcolor"/>

                <EditText
                    android:id="@+id/et_for_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/textcolor"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12ssp"
                    android:padding="@dimen/_10sdp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/textcolor"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp">

                    <LinearLayout
                        android:id="@+id/layout_for_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_uncheck"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:src="@drawable/uncheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:textSize="@dimen/_12ssp"
                        android:layout_toRightOf="@+id/iv_uncheck"
                        android:fontFamily="@font/nunito_light"
                        android:textColor="@color/textcolor"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_for_forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_12ssp"
                        android:fontFamily="@font/nunito_light"
                        android:layout_alignParentRight="true"
                        android:text="@string/forgot_password"/>
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            app:cardCornerRadius="@dimen/_35sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/logo"/>

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/layout_for_login"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_bg">

            <TextView
                android:id="@+id/text"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:paddingStart="@dimen/_20sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/button_txt_bg"
                android:gravity="center_vertical"
                android:textColor="@color/green" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="match_parent"
                android:src="@drawable/shap_button"
                android:layout_marginStart="@dimen/_57sdp"
                android:scaleType="fitXY"
                android:paddingTop="@dimen/_minus12sdp"
                android:layout_marginLeft="@dimen/_57sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/next_icon"
                android:padding="@dimen/_5sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_for_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_100sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/nunito_light"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/nunito_semibold"
            android:layout_marginLeft="@dimen/_2sdp"
            android:textColor="@color/green" />
    </LinearLayout>

</RelativeLayout>
