<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qrees.activity.ChangePassActivity">

    <include
        android:id="@+id/layout_for_toolbar"
        layout="@layout/actionbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/layout_for_forgotP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_for_toolbar"
        android:background="@color/white"
        android:orientation="vertical">

       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_dis"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/nunito_light"
            android:textColor="@color/textcolor"/>-->

        <EditText
            android:id="@+id/et_for_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/nunito_light"
            android:hint="@string/new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/textcolor" />

        <EditText
            android:id="@+id/et_for_CPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/nunito_light"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/textcolor" />

        <RelativeLayout
            android:id="@+id/layout_for_button"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/button_bg">

            <TextView
                android:id="@+id/text"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="match_parent"
                android:background="@drawable/button_txt_bg"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingStart="@dimen/_20sdp"
                android:text="@string/change_pass_title"
                android:textColor="@color/green"
                android:textSize="@dimen/_12ssp" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_157sdp"
                android:layout_marginStart="@dimen/_157sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingTop="@dimen/_minus12sdp"
                android:scaleType="fitXY"
                android:src="@drawable/shap_button" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/next_icon" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_for_forgotP"
        android:background="@color/colorPrimary1"/>

</RelativeLayout>
