<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.qrees.activity.EditProfileActivity">

    <ImageView
        android:id="@+id/iv_for_back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/profile_back"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_312sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_80sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_field"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_for_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/green"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12ssp"
                    android:padding="@dimen/_10sdp"/>

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/textcolor"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_for_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/email"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/green"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12ssp"
                    android:padding="@dimen/_10sdp"/>

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/textcolor"/>

                <RelativeLayout
                    android:id="@+id/layout_for_changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_light"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/change_password" />

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/change_password"
                        android:padding="@dimen/_10sdp"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/textcolor"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_for_userImg"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:src="@drawable/profile" />

            <ImageView
                android:id="@+id/iv_for_camera"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/photo_camera" />

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/layout_for_update"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_bg">

            <TextView
                android:id="@+id/text"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="match_parent"
                android:text="@string/update"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/nunito_semibold"
                android:background="@drawable/button_txt_bg"
                android:gravity="center_vertical"
                android:textColor="@color/green" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="match_parent"
                android:src="@drawable/shap_button"
                android:layout_marginStart="@dimen/_57sdp"
                android:scaleType="fitXY"
                android:paddingTop="@dimen/_minus12sdp"
                android:layout_marginLeft="@dimen/_57sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/next_icon"
                android:padding="@dimen/_5sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
